fixed navbar margins on mobile

--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -23,6 +23,9 @@
             padding-left: 0;
             margin-right: 2.6rem;
         }
+        @media only screen and (max-width: $bp-small) {
+            margin-right: 1.25rem;
+        }
     }
 
     &__nav {
